--- a/src/scss/blocks/_back.scss
+++ b/src/scss/blocks/_back.scss
@@ -39,6 +39,7 @@
 
 .section-back {
 	margin-bottom: 39px;
+	@include total-padding;
 
 	&__arrow-top {
 		display: flex;
