--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -5,6 +5,7 @@
 	align-items: center;
 	margin-bottom: 160px;
 	width: 95%;
+	@include total-padding;
 
 	&__name-company {
 		color: var(--color-orange);
