--- a/src/scss/blocks/_main-index.scss
+++ b/src/scss/blocks/_main-index.scss
@@ -1,6 +1,7 @@
 .main-index {
 	margin-bottom: 246px;
 	position: relative;
+	@include total-padding;
 
 	&__content {
 		display: flex;
