--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import "config/_normalize.scss";
 @import "config/_reset.scss";
 @import "config/_fonts.scss";
+@import "config/mixins.scss";
 
 // Подключение блоков
 @import "blocks/_header.scss";
@@ -22,7 +23,6 @@
 .container {
 	max-width: 1240px;
 	width: 100%;
-	padding: 0 20px;
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -36,4 +36,8 @@
 	--color-gray: #A5A6F6;
 
 	--background-color-gray: rgba(239, 239, 239, 0.83);
+}
+
+body {
+	box-sizing: border-box;
 }
